[package]
name = "android-sdcard-file"
version = "0.1.0"
description = "ADB SDCard File Manager"
authors = ["liaochenliang"]
edition = "2021"

[lib]
name = "android_sdcard_file_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
